--- a/.travis.yml
+++ b/.travis.yml
@@ -13,8 +13,6 @@ jdk:
   - oraclejdk8
 
 script:
-  - sbt ++$TRAVIS_SCALA_VERSION -Dfile.encoding=UTF8 "project stun" test
-  - sbt ++$TRAVIS_SCALA_VERSION -Dfile.encoding=UTF8 "project http" test
-  - sbt ++$TRAVIS_SCALA_VERSION -Dfile.encoding=UTF8 "project webSocket" test
+  - sbt ++$TRAVIS_SCALA_VERSION -Dfile.encoding=UTF8 "project allProtocols" test
 
 
