Switch to OpenJDK8

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,9 +12,9 @@ cache:
   - $HOME/.sbt
 
 jdk:
-  - oraclejdk8
+  - openjdk8
 
 script:
-  - sbt "project allProtocols" "++$TRAVIS_SCALA_VERSION test"
+  - sbt -Dfile.encoding=UTF8 "project allProtocols" "++$TRAVIS_SCALA_VERSION test"
 
 
